tests/fixtures/invalid/int_bitor_bytes.py
# Cannot bitwise OR Int and Bytes
x: int = 1 | b"hello"
